<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="accediendoServidor">Accediendo al servidor</string>
  <string name="aceptar">Aceptar</string>
  <string name="admobAppId">ca-app-pub-7580418012946913~3967496876</string>
  <string name="admob_banner_id">ca-app-pub-7580418012946913/4007149035</string>
  <string name="admob_open_app_id">ca-app-pub-7580418012946913/2604485915</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="antiguedadAnosYMeses">%d años y %d meses.</string>
  <string name="app_gasolineras">App gasolineras</string>
  <string name="app_name">Matrículas</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="aviso_legal">Aviso legal</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
  <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
  <string name="buscar">Buscar</string>
  <string name="call_notification_answer_action">Answer</string>
  <string name="call_notification_answer_video_action">Video</string>
  <string name="call_notification_decline_action">Decline</string>
  <string name="call_notification_hang_up_action">Hang Up</string>
  <string name="call_notification_incoming_text">Incoming call</string>
  <string name="call_notification_ongoing_text">Ongoing call</string>
  <string name="call_notification_screening_text">Screening an incoming call</string>
  <string name="cancelar">Cancelar</string>
  <string name="categoriaB">Categoría B</string>
  <string name="categoriaC">Categoría C</string>
  <string name="categoriaCeroEmisiones">Cero emisiones</string>
  <string name="categoriaECO">ECO</string>
  <string name="categoriaSinDistintivo">Sin distintivo ambiental</string>
  <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
  <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="clear_text_end_icon_content_description">Clear text</string>
  <string name="common_google_play_services_enable_button">Enable</string>
  <string name="common_google_play_services_enable_text">%1$s won't work unless you enable Google Play services.</string>
  <string name="common_google_play_services_enable_title">Enable Google Play services</string>
  <string name="common_google_play_services_install_button">Install</string>
  <string name="common_google_play_services_install_text">%1$s won't run without Google Play services, which are missing from your device.</string>
  <string name="common_google_play_services_install_title">Get Google Play services</string>
  <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
  <string name="common_google_play_services_notification_ticker">Google Play services error</string>
  <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
  <string name="common_google_play_services_unsupported_text">%1$s won't run without Google Play services, which are not supported by your device.</string>
  <string name="common_google_play_services_update_button">Update</string>
  <string name="common_google_play_services_update_text">%1$s won't run unless you update Google Play services.</string>
  <string name="common_google_play_services_update_title">Update Google Play services</string>
  <string name="common_google_play_services_updating_text">%1$s won't run without Google Play services, which are currently updating.</string>
  <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
  <string name="common_open_on_phone">Open on phone</string>
  <string name="common_signin_button_text">Sign in</string>
  <string name="common_signin_button_text_long">Sign in with Google</string>
  <string name="compartir_informe">Compartir Informe</string>
  <string name="comprar">Comprar</string>
  <string name="copy">Copy</string>
  <string name="copy_toast_msg">Link copied to clipboard</string>
  <string name="datosNoEncontrados">No se encontraron datos adicionales para esta matrícula</string>
  <string name="debesEsperar">Debes esperar %1$d segundos</string>
  <string name="descripcion">Descripción</string>
  <string name="descripcionModificada">Descripción modificada</string>
  <string name="dialog_message">Hello,
To continue offering our application for free, we rely on personalized ads. These ads are designed to be relevant and useful to you. If you choose not to view these ads, you will see ads that are less relevant. Would you like to consent to personalized ads and support us?</string>
  <string name="dialog_negative_button">Do not consent</string>
  <string name="dialog_positive_button">Consent</string>
  <string name="dialog_title">We need your support</string>
  <string name="distintivos">Distintivos ambientales</string>
  <string name="edad">Edad</string>
  <string name="eliminar_anuncios">Premium</string>
  <string name="enviarFichero">Enviar fichero</string>
  <string name="enviarUsando">Enviar usando...</string>
  <string name="errorServidorDistintivosNoDisponible">El servidor de distintivos no está disponible</string>
  <string name="errorServidorNoDisponible">El servidor de datos no está disponible</string>
  <string name="error_a11y_label">Error: invalid</string>
  <string name="error_exportacion">Error al exportar</string>
  <string name="error_icon_content_description">Error</string>
  <string name="estado_carreteras">Estado de carreteras</string>
  <string name="estimacionFecha">Última matriculación</string>
  <string name="etiquetaAmarilla">Etiqueta ambiental B</string>
  <string name="etiquetaAzul">Etiqueta mediambiental 0</string>
  <string name="etiquetaEco">Etiqueta ambiental ECO</string>
  <string name="etiquetaNoEncontrada">Distintivo no encontrado</string>
  <string name="etiquetaSinDistintivo">Sin distintivo.</string>
  <string name="etiquetaVerde">Etiqueta ambiental C</string>
  <string name="expand_button_title">Advanced</string>
  <string name="exportar">Exportar</string>
  <string name="exportarExcel">Exportar a Excel</string>
  <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
  <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
  <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
  <string name="fabricacion">Fabricación</string>
  <string name="fallback_menu_item_copy_link">Copy link</string>
  <string name="fallback_menu_item_open_in_browser">Open in browser</string>
  <string name="fallback_menu_item_share_link">Share link</string>
  <string name="ficheroMatriculas">Fichero de matrículas excel</string>
  <string name="first_fragment_label">First Fragment</string>
  <string name="guardar">Guardar</string>
  <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
  <string name="ia_analizando_progress">IA analizando...
Obteniendo tasación de mercado</string>
  <string name="icon_content_description">Dialog Icon</string>
  <string name="infoExportacion">Hay %d matrículas disponibles para exportar</string>
  <string name="infoExportacionNumero">Se exportaron %d matrículas en el fichero %s</string>
  <string name="info_premium">Elimina los anuncios para siempre con un único pago.
Informes sin límite diario.
Sin subscripciones.</string>
  <string name="informe">Informe</string>
  <string name="informe_ia">Informe IA</string>
  <string name="iniciandoApp">Iniciando app</string>
  <string name="insterstitialAdmobId1">ca-app-pub-7580418012946913/8852281604</string>
  <string name="insterstitialAdmobId2">ca-app-pub-7580418012946913/2781289275</string>
  <string name="masApps">Más apps</string>
  <string name="matriculas">Matrículas</string>
  <string name="matriculasGuardadas">Matrículas guardadas</string>
  <string name="privacy_policy">Política de privacidad</string>
  <string name="reintentar">Reintentar</string>
  <string name="textoB">Turismos y furgonetas ligeras de gasolina matriculadas a partir de enero del año 2000 y de diésel a partir de enero de 2006. Vehículos de más de 8 plazas y de transporte de mercancías tanto de gasolina como de diésel matriculados a partir de 2005. Por tanto, los de gasolina deben cumplir la norma Euro 3 y en Diésel la Euro 4 y 5.</string>
  <string name="textoC">Turismos y furgonetas ligeras de gasolina matriculadas a partir de enero de 2006 y diésel a partir de 2014. Vehículos de más de 8 plazas y de transporte de mercancías, tanto de gasolina como de diésel, matriculados a partir de 2014. Por tanto, los de gasolina deben cumplir la norma Euro 4,5 y 6 y en Diésel la Euro 6.</string>
  <string name="textoCeroEmisiones">Vehículos eléctricos de batería (BEV), vehículo eléctrico de autonomía extendida (REEV), vehículo eléctrico híbrido enchufable (PHEV) con una autonomía mínima de 40 kilómetros o vehículos de pila de combustible.</string>
  <string name="textoECO">Vehículos como vehículos híbridos enchufables con autonomía inferior a 40 km, vehículos híbridos no enchufables (HEV), vehículos propulsados por gas natural, vehículos propulsados por gas natural (GNC y GNL) o gas licuado del petróleo (GLP). En todo caso, deberán cumplir los criterios de la etiqueta C.</string>
  <string name="textoSinDistintivo">Turismos y furgonetas de gasolina matriculados antes del año 2000, los diésel anteriores a 2006 y las motos anteriores a 2003.</string>
  <string name="vazquezSoftware">Vázquez Software</string>
  <string name="webs_interes">Webs de interés</string>
</resources>