<?xml version='1.0' encoding='utf-8' ?>
<ScrollView android:padding="10.0dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
    <TextView android:textSize="20.0sp"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/categoriaCeroEmisiones" />
    <RelativeLayout android:background="@drawable/border"
                    android:padding="10.0dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dp">
      <ImageView android:id="@id/ivCero"
                 android:layout_width="@dimen/distintivo"
                 android:layout_height="@dimen/distintivo"
                 android:layout_marginRight="10.0dp"
                 android:src="@drawable/ceroazul"
                 android:layout_alignParentLeft="true" />
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoCeroEmisiones"
                android:layout_toRightOf="@id/ivCero"
                android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textSize="20.0sp"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/categoriaECO" />
    <RelativeLayout android:background="@drawable/border"
                    android:padding="10.0dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dp">
      <ImageView android:id="@id/ivECO"
                 android:layout_width="@dimen/distintivo"
                 android:layout_height="@dimen/distintivo"
                 android:layout_marginRight="10.0dp"
                 android:src="@drawable/eco"
                 android:layout_alignParentLeft="true" />
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoECO"
                android:layout_toRightOf="@id/ivECO"
                android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textSize="20.0sp"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/categoriaC" />
    <RelativeLayout android:background="@drawable/border"
                    android:padding="10.0dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dp">
      <ImageView android:id="@id/ivC"
                 android:layout_width="@dimen/distintivo"
                 android:layout_height="@dimen/distintivo"
                 android:layout_marginRight="10.0dp"
                 android:src="@drawable/verdec"
                 android:layout_alignParentLeft="true" />
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoC"
                android:layout_toRightOf="@id/ivC"
                android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textSize="20.0sp"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/categoriaB" />
    <RelativeLayout android:background="@drawable/border"
                    android:padding="10.0dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dp">
      <ImageView android:id="@id/ivB"
                 android:layout_width="@dimen/distintivo"
                 android:layout_height="@dimen/distintivo"
                 android:layout_marginRight="10.0dp"
                 android:src="@drawable/amarillob"
                 android:layout_alignParentLeft="true" />
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoB"
                android:layout_toRightOf="@id/ivB"
                android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textSize="20.0sp"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/categoriaSinDistintivo" />
    <RelativeLayout android:background="@drawable/border"
                    android:padding="10.0dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dp">
      <ImageView android:id="@id/ivSin"
                 android:layout_width="@dimen/distintivo"
                 android:layout_height="@dimen/distintivo"
                 android:layout_marginRight="10.0dp"
                 android:src="@drawable/sindistintivo"
                 android:layout_alignParentLeft="true" />
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoSinDistintivo"
                android:layout_toRightOf="@id/ivSin"
                android:layout_alignParentRight="true" />
    </RelativeLayout>
  </LinearLayout>
</ScrollView>