<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:background="@drawable/custom_dialog_background"
              android:padding="10.0dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/titleLetters"
            android:layout_gravity="center_horizontal"
            android:id="@id/dialogTitle"
            android:paddingBottom="10.0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textAlignment="center" />
  <TextView android:textColor="@color/textLetters"
            android:layout_gravity="center_horizontal"
            android:id="@id/dialogMessage"
            android:paddingBottom="10.0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message"
            android:textAlignment="center" />
  <Button android:textSize="16.0sp"
          android:textColor="@color/consentLetters"
          android:id="@id/positiveButton"
          android:background="@color/buttonBackground"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10.0dp"
          android:layout_marginRight="10.0dp"
          android:text="@string/dialog_positive_button"
          android:textAllCaps="false" />
  <Button android:textSize="12.0sp"
          android:textColor="@color/doNotConsentLetters"
          android:id="@id/negativeButton"
          android:background="@color/background"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="0.0dp"
          android:text="@string/dialog_negative_button"
          android:textAllCaps="false" />
</LinearLayout>