<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout android:id="@id/rlInformacion"
                android:padding="10.0dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="40.0sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:id="@id/tvMatricula"
            android:background="@drawable/plate"
            android:paddingLeft="40.0dp"
            android:paddingBottom="5.0dp"
            android:layout_width="320.0dp"
            android:layout_height="70.0dp"
            android:layout_marginTop="20.0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
  <ScrollView android:fadingEdgeLength="50.0dp"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10.0dp"
              android:layout_above="@id/btInformeIA"
              android:layout_below="@id/tvMatricula"
              android:requiresFadingEdge="vertical">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
      <RelativeLayout android:id="@id/rlDescripcion"
                      android:background="@drawable/border"
                      android:padding="10.0dp"
                      android:visibility="gone"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
        <TextView android:id="@id/tvTituloDescripcion"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/ajuste"
                  android:text="@string/descripcion"
                  android:layout_alignParentTop="true" />
        <ImageView android:id="@id/ivEditarDescripcion"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@0x7f0800b9"
                   android:layout_alignParentTop="true"
                   android:layout_alignParentRight="true"
                   android:onClick="onClickEditarDescripcion" />
        <TextView android:textSize="@dimen/textoDatos"
                  android:textColor="#000"
                  android:id="@id/tvDescripcion"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/tvTituloDescripcion" />
        <ImageView android:id="@id/ivCargandoDescripcion"
                   android:background="@drawable/downloading"
                   android:visibility="gone"
                   android:layout_width="70.0dp"
                   android:layout_height="70.0dp"
                   android:layout_marginTop="5.0dp"
                   android:layout_marginBottom="5.0dp"
                   android:layout_below="@id/tvTituloDescripcion"
                   android:layout_centerHorizontal="true" />
      </RelativeLayout>
      <RelativeLayout android:id="@id/rlDistintivo"
                      android:background="@drawable/border"
                      android:padding="10.0dp"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10.0dp"
                      android:onClick="onClickInfoDistintivo">
        <ImageView android:id="@id/ivDistintivo"
                   android:background="@drawable/downloading"
                   android:layout_width="50.0dp"
                   android:layout_height="50.0dp"
                   android:layout_alignParentTop="true" />
        <ImageView android:id="@id/ivInfo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10.0dp"
                   android:layout_marginTop="10.0dp"
                   android:src="@drawable/ic_info_outline_black_24dp"
                   android:layout_alignParentTop="true"
                   android:layout_alignParentRight="true" />
        <TextView android:textSize="18.0sp"
                  android:textColor="#000"
                  android:gravity="center_horizontal"
                  android:id="@id/tvDistintivo"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5.0dp"
                  android:layout_toLeftOf="@id/ivInfo"
                  android:layout_toRightOf="@id/ivDistintivo"
                  android:layout_above="@id/btReintentarDistintivo"
                  android:layout_alignParentTop="true"
                  android:textAlignment="center" />
        <Button android:id="@id/btReintentarDistintivo"
                android:background="@drawable/border_button"
                android:paddingRight="50.0dp"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dp"
                android:text="@string/reintentar"
                android:drawableRight="@0x7f0800cd"
                android:layout_below="@id/ivDistintivo"
                android:layout_alignParentBottom="true"
                android:onClick="onClickReintentarDistintivo" />
      </RelativeLayout>
      <LinearLayout android:orientation="vertical"
                    android:id="@id/llFechaOffLine"
                    android:background="@drawable/border"
                    android:padding="10.0dp"
                    android:visibility="visible"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/ajuste"
                  android:text="@string/estimacionFecha" />
        <TextView android:textSize="18.0sp"
                  android:textColor="#000"
                  android:id="@id/tvEstimacionFecha"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/ajuste"
                  android:text="@string/edad" />
        <TextView android:textSize="18.0sp"
                  android:textColor="#000"
                  android:id="@id/tvEstimacionAntiguedad"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
  <Button android:enabled="false"
          android:id="@id/btInformeIA"
          android:background="@drawable/border_button"
          android:paddingRight="50.0dp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10.0dp"
          android:text="@string/informe_ia"
          android:drawableRight="@drawable/ic_ia_informe"
          android:layout_above="@id/btGuardar"
          android:onClick="onClickInformeIA" />
  <Button android:id="@id/btGuardar"
          android:background="@drawable/border_button"
          android:paddingRight="50.0dp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10.0dp"
          android:text="@string/guardar"
          android:drawableRight="@0x7f0800be"
          android:layout_alignParentBottom="true"
          android:onClick="onClickGuardar" />
</RelativeLayout>